// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CToastBody customize 1`] = `
<div>
  <div
    class="toast-body bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CToastBody component 1`] = `
<div>
  <div
    class="toast-body"
  >
    Test
  </div>
</div>
`;
